<resources>
    <string name="app_name">Cafe Order</string>
    <string name="loga_description">Логотип кафе</string>
    <string name="welcome">Добро Пожаловать!</string>
    <string name="hint_name">Введите ваше имя:</string>
    <string name="hint_password">Введите ваше пароль:</string>
    <string name="default_name">клиент</string>
    <string name="default_password">пароль</string>
    <string name="buttom_crete_order">СОЗДАТЬ ЗАКАЗ</string>
    <string name="warning_fill_fields">Все поля должны быть заполнены</string>
    <string name="hello_user">Привет %s! Что будете заказывать?</string>
    <string name="tea">Чай</string>
    <string name="coffee">Кофе</string>
    <string name="additions">Что добавить в ваш %s?</string>
    <string name="milk">Молоко</string>
    <string name="sugar">Сахар</string>
    <string name="limon">Лимон</string>
    <string name="chosee_drink">Выберите вид напитка</string>
    <string name="buttom_send_description">Кнопка отправить заказ</string>
    <string name="order">\"Имя: %s\nПароль: %s\nНапиток: %s\nВид напитка: %s\n \"</string>
    <string name="need_additions">\"Необходимые добавки \"</string>
    <string-array name="options_of_coffee">
        <item>Американо</item>
        <item>Экспресо</item>
        <item>Латте</item>
    </string-array>
    <string-array name="options_of_tea">
        <item>Черный</item>
        <item>Зеленый</item>
        <item>Красный</item>
    </string-array>
</resources>
